test/fail/fail_has_stdout/src/FailHasStdout.hx
package;

class FailHasStdout {
	public static function identity<T>(x:T):T {
		trace("hello");
		return x;
	}
}
